--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,3 +1,5 @@
-background = 282c34
-foreground = ffffff
+#background = 282c34
+#foreground = ffffff
 keybind = shift+enter=text:\n
+theme = catppuccin-frappe.conf
+shell-integration = zsh
