--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,8 @@
 # Enable mouse mode
 #set -g mouse off
 
-
 # Start counting pane and window number at 1
 set -g base-index 1
 setw -g pane-base-index 1
+
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
