--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,14 @@
 #background = 282c34
 #foreground = ffffff
+
+font-family = "JetBrains Mono"
+
 keybind = shift+enter=text:\n
 theme = catppuccin-frappe.conf
 shell-integration = zsh
 window-height = 40
 window-width = 130
+
+window-decoration = true
+background-blur-radius = 20
+background-opacity = 0.7
